Diagnose Connection Fix (#62)
* Modified diagnoseConnection method to handle RTSP as well as HTTP

* Included error messages when catching exceptions, and changed .notVideoStream message